--- a/index.html
+++ b/index.html
@@ -720,15 +720,18 @@ reporting high and less correlated features.
                             for teams that do not have dedicated server management infrastructure to manage multiple Al/ML projects on shared compute and storage resources.
                             <br />
                             <br />
-                            <a href="https://recsys.acm.org/recsys20/accepted-contributions/"
+                            <a href="https://siim.org/page/2022cmimi"
                                 target="_blank">Publication</a>
                         </p>
                     </div>
+                    
                     <div class="resume-date text-md-right">
                         <span class="text-primary">March 2020</span>
                     </div>
 
                 </div>
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         
                         <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Credit Card
